--- a/src/main/webapp/includes/menu.xhtml
+++ b/src/main/webapp/includes/menu.xhtml
@@ -20,9 +20,9 @@
             </p:link>
         </li>
         <li>
-            <p:link outcome="/car-list.jsf">
-                <i class="fa fa-car"></i>
-                <span>Cars</span>
+            <p:link outcome="/customer-list.jsf">
+                <i class="fa fa-child"></i>
+                <span>Customers</span>
             </p:link>
         </li>
     </ul>
